resolve double serialization for filter.kt & fix format (#15)
Co-authored-by: Kalynn Kosyka <kalynnk@spotify.com>